# python-cpp-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  setup.py  test_trace.csv
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake
python/: pyproject.toml  setup.py
python/loco_powertrain/: __init__.py  default_powertrain.py
scripts/: test_powertrain.py
source/: lib.cpp  lib.hpp  main.cpp  py_bindings.cpp
source/altrios_py/: __init__.py
source/python_powertrains/: default_powertrain.py
test/: CMakeLists.txt
test/source/: sandbox_test.cpp
